--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -35,7 +35,7 @@ body {}
   width: 15em;
   height: 15em;
   background-image:
-    radial-gradient(#e6646462, #00ffff08, #000000 70%),
+    radial-gradient(#e66464b5, #00ffff0c, #000000 70%),
     repeating-conic-gradient(from 45deg,
       #111 0deg 90deg,
       #222 90deg 180deg);
@@ -60,8 +60,8 @@ body {}
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#e6646412, #9198e509);
-  box-shadow: inset 0 0 .2em .02em #e6646499, inset 0 0 .2em .02em #9198e599;
+  background: linear-gradient(#e664640b, #9198e503);
+  box-shadow: inset 0 0 .2em .02em #e66464a8, inset 0 0 .2em .02em #9198e599, 0 0 0.5em #000a;
   backdrop-filter: blur(5px);
 }
 
@@ -87,13 +87,16 @@ body {}
   height: 2em;
   background: linear-gradient(#9198e551, #e66464da);
   transform: translateY(-50%) rotateX(90deg);
+  box-shadow: inset 0 0 .2em .02em #e6646499, inset 0 0 .2em .02em #9198e599, 0 0 0.5em #000a;
 }
 
 .bottom {
   position: absolute;
   width: 2em;
   height: 2em;
-  background: linear-gradient(#9198e551, #e664644d);
+  background: linear-gradient(#9198e500, #e6646400);
+  bottom: 0;
+  box-shadow: 0 0 2em #e66464d2;
   transform: translateY(50%) rotateX(90deg);
 }
 
@@ -101,8 +104,8 @@ body {}
   width: 1em;
   height: 1em;
   border-radius: 50%;
-  border: .01em solid #6bdcff;
-  background: radial-gradient(#33abf6f5, #f2c8c883);
+  border: .02em solid rgba(0, 255, 255, 0.483);
+  background: radial-gradient(circle at top, #0ff, #33abf6, 40%, #00000071, 85%, #f2c8c8ab );
   background-color: #4ac5ebf6;
   box-shadow:
     0 0 0.7em 0.1em #6bdcff, 0 0 1.5em .3em #0ff;
@@ -110,4 +113,5 @@ body {}
   position: absolute;
   left: -.5em;
   bottom: 1em;
+ 
 }
