--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,10 +4,6 @@
   padding: 0;
 }
 
-
-
-body {}
-
 .container {
   background-color: #1c1000;
   min-height: 100vh;
@@ -17,8 +13,15 @@ body {}
   font-size: 75px;
 }
 
+@keyframes scene-rotate {
+  to {
+    transform: rotateY(360deg);
+  }
+}
+
 .elements {
   position: absolute;
+  
 }
 
 .scene {
@@ -40,6 +43,7 @@ body {}
       #111 0deg 90deg,
       #222 90deg 180deg);
   background-size: 100%, 1em 1em;
+  
 }
 
 .cube {
@@ -51,6 +55,16 @@ body {}
   perspective: 10em;
   perspective-origin: 50% calc(50% - 2em);
   transform-style: preserve-3d;
+  
+}
+
+.shadow {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  left: 10%;
+  border-radius: 40%;
+  background-image: radial-gradient( #0007, #0000);
 }
 
 .left,
@@ -113,5 +127,4 @@ body {}
   position: absolute;
   left: -.5em;
   bottom: 1em;
- 
 }
