--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,35 +1,33 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
-  background-color: #1c1000;
+  background-color: #000;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 75px;
-}
-
-@keyframes scene-rotate {
-  to {
-    transform: rotateY(360deg);
-  }
-}
-
-.elements {
-  position: absolute;
-  
-}
-
-.scene {
-  position: absolute;
   perspective: 10em;
   perspective-origin: 50% calc(50% - 2em);
+}
+
+
+.scene {
+  position: relative;
+  animation: sceneRotate 60s infinite linear;
   transform-style: preserve-3d;
 }
+ 
+@keyframes sceneRotate {
+   
+    to { transform: rotateY(360deg); }
+  }
+
+
 
 .floor {
   position: absolute;
@@ -43,22 +41,19 @@
       #111 0deg 90deg,
       #222 90deg 180deg);
   background-size: 100%, 1em 1em;
-  
 }
 
 .cube {
+  position: absolute;
   width: 2em;
   height: 2em;
-  position: absolute;
+  perspective-origin: 50%;
+  transform-style: preserve-3d;
   top: -1em;
   left: -1em;
-  perspective: 10em;
-  perspective-origin: 50% calc(50% - 2em);
-  transform-style: preserve-3d;
-  
 }
 
-.shadow {
+.shaow {
   position: absolute;
   width: 80%;
   height: 80%;
@@ -75,8 +70,8 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(#e664640b, #9198e503);
-  box-shadow: inset 0 0 .2em .02em #e66464a8, inset 0 0 .2em .02em #9198e599, 0 0 0.5em #000a;
-  backdrop-filter: blur(5px);
+  box-shadow: inset 0 0 .2em .01em #e66464a8, inset 0 0 .2em .01em #9198e599;
+  backdrop-filter: blur(3px);
 }
 
 .front {
@@ -99,9 +94,9 @@
   position: absolute;
   width: 2em;
   height: 2em;
-  background: linear-gradient(#9198e551, #e66464da);
+  background: linear-gradient(#9198e525, #e6646463);
   transform: translateY(-50%) rotateX(90deg);
-  box-shadow: inset 0 0 .2em .02em #e6646499, inset 0 0 .2em .02em #9198e599, 0 0 0.5em #000a;
+  box-shadow: inset 0 0 .2em .02em #e6646499, inset 0 0 .2em .02em #9198e599;
 }
 
 .bottom {
@@ -115,6 +110,7 @@
 }
 
 .ball {
+  position: absolute;
   width: 1em;
   height: 1em;
   border-radius: 50%;
@@ -124,7 +120,7 @@
   box-shadow:
     0 0 0.7em 0.1em #6bdcff, 0 0 1.5em .3em #0ff;
   filter: blur(.01em);
-  position: absolute;
   left: -.5em;
   bottom: 1em;
+  animation: sceneRotate 60s infinite linear reverse;
 }
