--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -12,9 +12,19 @@
   align-items: center;
   font-size: 75px;
   perspective: 10em;
-  perspective-origin: 50% calc(50% - 2em);
+  perspective-origin: 50% calc(50% - 2.5em);
+  animation: luminous 2.5s infinite ease-out;
 }
 
+@keyframes luminous {
+  0%, 100% {
+    background-color: #000;
+  }
+
+  50% {
+    background-color: #000606;
+}
+}
 
 .scene {
   position: relative;
@@ -23,8 +33,9 @@
 }
  
 @keyframes sceneRotate {
-   
-    to { transform: rotateY(360deg); }
+   to { 
+      transform: rotateY(360deg); 
+    }
   }
 
 
@@ -33,33 +44,106 @@
   position: absolute;
   transform: translate(-50%, -50%) rotateX(90deg);
   top: 1em;
-  width: 15em;
-  height: 15em;
-  background-image:
-    radial-gradient(#e66464b5, #00ffff0c, #000000 70%),
+  width: 14em;
+  height: 14em;
+  border-radius: 12em;
+  background:
+    radial-gradient(#e66464b5, #00ffff0c 20%, #000000 50%),
     repeating-conic-gradient(from 45deg,
       #111 0deg 90deg,
       #222 90deg 180deg);
   background-size: 100%, 1em 1em;
+  animation: floor 2.5s infinite ease-in-out;
+}
+
+
+
+@keyframes floor {
+0% {
+ background: radial-gradient(#e66464b5, #00ffff0c 22%, #000000 50%),
+ repeating-conic-gradient(from 45deg,
+ #111 0deg 90deg,
+ #222 90deg 180deg);
+ background-size: 100%, 1em 1em;
+}
+
+12% {
+  background: radial-gradient(#e66464b5, #00ffff0c 24%, #000000 55%),repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+25% {
+  background: radial-gradient(#e66464b5, #00ffff0c 22%, #000000 60%),repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+37% {
+  background: radial-gradient(#e66464b5, #00ffff0c 20%, #000000 65%),repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+50% {
+  background: radial-gradient(#e66464b5, #00ffff0c 20%, #000000 70%),repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+62% {
+  background: radial-gradient(#e66464b5, #00ffff0c 20%, #000000 65%),repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+75% {
+  background: radial-gradient(#e66464b5, #00ffff0c 20%, #000000 60%),repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+87% {
+  background: radial-gradient(#e66464b5, #00ffff0c 20%, #000000 55%),
+  repeating-conic-gradient(from 45deg,
+  #111 0deg 90deg,
+  #222 90deg 180deg);
+  background-size: 100%, 1em 1em;
+}
+
+100% {
+  background: radial-gradient(#e66464b5, #00ffff0c 20%, #000000 50%),
+ repeating-conic-gradient(from 45deg,
+ #111 0deg 90deg,
+ #222 90deg 180deg);
+ background-size: 100%, 1em 1em;
+}
 }
 
 .cube {
   position: absolute;
   width: 2em;
   height: 2em;
-  perspective-origin: 50%;
   transform-style: preserve-3d;
-  top: -1em;
+  bottom: -1em;
   left: -1em;
+  animation: collision 2.5s infinite linear;
 }
 
-.shaow {
-  position: absolute;
-  width: 80%;
-  height: 80%;
-  left: 10%;
-  border-radius: 40%;
-  background-image: radial-gradient( #0007, #0000);
+@keyframes collision {
+0%, 100% {
+height: 1.5em;
+}
+
+10%, 91% {
+height: 2em;
+}
 }
 
 .left,
@@ -115,12 +199,28 @@
   height: 1em;
   border-radius: 50%;
   border: .02em solid rgba(0, 255, 255, 0.483);
-  background: radial-gradient(circle at top, #0ff, #33abf6, 40%, #00000071, 85%, #f2c8c8ab );
+  background: radial-gradient(circle at top, #0ff, #33abf6, 40%, #00000071, 85%, #f2c8c8df );
   background-color: #4ac5ebf6;
   box-shadow:
-    0 0 0.7em 0.1em #6bdcff, 0 0 1.5em .3em #0ff;
-  filter: blur(.01em);
+    0 0 #6bdcff, 0 0 #0ff;
+  filter: blur(.013em);
   left: -.5em;
   bottom: 1em;
-  animation: sceneRotate 60s infinite linear reverse;
+  animation: 
+  bounce 2.5s infinite ease-out,
+  sceneRotate 60s infinite linear reverse;
+}
+
+@keyframes bounce {
+  0% ,100% {
+    bottom: 0.5em;
+  }
+
+  50% {
+    bottom: 3em;
+    animation-timing-function: ease-in;
+    background: radial-gradient(circle at top, #0ff, #33abf6, 40%, #00000071, 85%, #f2c8c8be );
+    box-shadow:
+    0 0 1em 0.5em #6bdcff, 0 0 3em .3em #0ff;
+  }
 }
